# codex-ChoirComposer

./: README.md  package-lock.json  package.json  pydantic.py  pyproject.toml  scripts_bundle_frontend_deps.mjs
.github/workflows/: screenshot-smoke.yml
app/: logging_utils.py  main.py  models.py
app/services/: boundary_planner.py  composer.py  engraving_export.py  engraving_preview.py  lyric_debug_report.py  lyric_mapping.py  music_theory.py  musicxml_export.py  pdf_deps.py  pdf_export.py  score_normalization.py  score_validation.py
app/static/: app.js  index.html  style.css
scripts/: capture_screenshot.py
tests/: test_boundary_planner.py  test_composer.py  test_engraving_preview.py  test_format_api_error_message.py  test_frontend_canvg_dependency.py  test_frontend_engraving_banner_logic.py  test_frontend_workflow_regression.py  test_musicxml_export.py  test_no_cluster_ui.py  test_pdf_capabilities.py  test_pdf_export_pipeline.py  test_pdf_tempo_font_pipeline.py  test_verse_music_units.py  test_workflow.py
